deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  replicas: 2 # Set the desired number of replicas
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: nodeapp
          image: ridhimanwazir/nodejs-app:latest # Replace with your Docker image name
          ports:
            - containerPort: 4000 # Expose the port specified in your Dockerfile
