service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  ports:
    - protocol: TCP
      targetPort: 4000
      port: 4000
      nodePort: 30001
  type: NodePort # Use NodePort service type
