ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sampleapp.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nodeapp-service
                port:
                  number: 4000
